--- a/aula12ex/ex014/style.css
+++ b/aula12ex/ex014/style.css
@@ -20,3 +20,12 @@ footer{
     text-align: center;
     font-style: italic;
 }
+div{
+    text-align: center;
+    padding: 8px;
+}
+img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+  }
