--- a/aula12ex/ex015/style.css
+++ b/aula12ex/ex015/style.css
@@ -20,3 +20,8 @@ footer{
     text-align: center;
     font-style: italic;
 }
+img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+  }
